--- a/collagedata.html
+++ b/collagedata.html
@@ -185,7 +185,7 @@
 
     <div class="flex">
         <h2>Student Data (View ID)</h2>
-        <a href="./collage.html">
+        <a href="./index.html">
             <h2 class="Creatlink">Creat new ID</h2>
         </a>
     </div>
