--- a/collagedata.html
+++ b/collagedata.html
@@ -150,7 +150,8 @@
             padding: 20px;
             border-radius: 12px;
             text-align: center;
-            max-width: 700px;
+            width: 500px;
+            height: 500px;
         }
 
         .modal-content img {
@@ -246,7 +247,7 @@
             let img = document.getElementById("modalImage");
 
             if (!photo) {
-                uploadPhoto(index); // no photo uploaded yet
+                uploadPhoto(index);
                 return;
             }
 
